# ninja-python-distributions

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  NinjaUrls.cmake  README.rst  appveyor.yml  circle.yml  constraints-ci.txt  constraints.txt  noxfile.py  pyproject.toml  requirements-deploy.txt  requirements-dev.txt  requirements-repair.txt  requirements-test.txt  scikit-ci.yml  setup.cfg  setup.py  versioneer.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build.yml
_build_backend/: backend.py
docs/: make_a_release.rst  update_ninja_version.rst
ninja/: __init__.py  _version.py
scripts/: convert_to_generic_platform_wheel.py  install-static-clang.sh  manylinux2014-aarch64-build-and-test-wheel.sh  repair_wheel.py  update_ninja_version.py
src/ninja/: __init__.py  __init__.pyi  _version.py
tests/: __init__.py  test_distribution.py  test_ninja.py  test_wheel.py
